# rustrays

./: Cargo.toml
.github/workflows/: main.yml  rust.yml
src/: main.rs  vec3.rs
