[package]
name = "rustrays"
version = "0.21.0"
edition = "2021"
description = "Rust ray tracer"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.9.0"
indicatif = "0.17.3"
rand = "0.8.5"

[package.metadata.rpm]
package = "rustrays"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
rustrays = { path = "/usr/bin/rustrays" }
